# tinylog

./: .editorconfig  .rustfmt.toml  .taplo.toml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/actions/rust/: action.yml
.github/workflows/: ci.yml
examples/: example.rs  filter.rs
src/: compat.rs  config.rs  error.rs  lib.rs  log_impl.rs  map.rs  tests.rs  util.rs  write.rs
src/tracing_impl/: mod.rs  visitor.rs
tests/: demo.rs
