[package]
name = "tinylog"
version = "1.2.0"
description = "Small logger"
license = "ISC"
authors = ["Purpzie"]
repository = "https://github.com/purpzie/tinylog"
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE"]
edition = "2018"

[dependencies]
atty = "0.2.14"
humantime = { version = "2.1.0", optional = true }
log = { version = "0.4.14", features = ["std"] }
parking_lot = { version = "0.11.2", optional = true }
termcolor = "1.1.2"
