[package]
name = "tinylog"
version = "2.0.0"
description = "Small logger"
license = "ISC"
authors = ["Purpzie"]
repository = "https://github.com/purpzie/tinylog"
include = ["src/**/*.rs", "Cargo.toml", "README.md", "LICENSE"]
edition = "2018"

[features]
default = ["parking_lot"]

[dependencies]
atty = { version = "0.2.14", default-features = false }
humantime = { version = "2.1.0", optional = true, default-features = false }
log = { version = "0.4.14", features = ["std"], default-features = false }
parking_lot = { version = "0.11.2", optional = true, default-features = false }
termcolor = { version = "1.1.2", default-features = false }
