[package]
name = "tinylog"
version = "4.0.0"
license = "MIT"
description = "A logger for my personal projects."
authors = ["Purpzie"]
include = ["src", "README.md", "LICENSE"]
edition = "2021"

[features]
default = ["log", "detect-color", "detect-timezone"]

detect-color = ["supports-color"]
detect-timezone = ["time?/local-offset"]
log = ["dep:log"]
parking_lot = ["dep:parking_lot"]
timestamps = ["dep:time"]
tracing = ["dep:ryu", "dep:tracing", "dep:tracing-subscriber"]

[dependencies]
itoa = {version = "1.0.3", default-features = false}
log = {optional = true, version = "0.4.17", default-features = false}
parking_lot = {optional = true, version = "0.12.1", default-features = false}
ryu = {optional = true, version = "1.0.11", default-features = false}
supports-color = {optional = true, version = "1.3.0", default-features = false}
time = {optional = true, version = "0.3.14", features = ["std"], default-features = false}
tracing = {optional = true, version = "0.1.36", default-features = false}
tracing-subscriber = {optional = true, version = "0.3.15", features = ["std"], default-features = false}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docs_rs"]
